<resources>
    <string name="app_name">AidChips</string>
    <string name="field_name">Name</string>
    <string name="field_pass">Password</string>
    <string name="field_passConfirm">Confirm Password</string>
    <string name="field_mail">E-mail</string>
    <string name="field_tel">Phone</string>
    <string name="InitPhone">+52</string>
    <string name="login">Log in</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="signup">Sign up</string>
    <string name="signup_title">Sign up!</string>
    <string name="login_title">Log In!</string>
    <string name="title_permissions">Permissions</string>
    <string name="description_permissions">lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsums</string>
    <string name="title_profile">Profile</string>
    <string name="description_profile">lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsums</string>
    <string name="title_alerts">Alerts</string>
    <string name="description_alerts">lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsum lorem ipmsums</string>
    <string name="title_settings">Settings</string>
    <string name="phone">Phone:</string>
    <string name="mail">E-Mail:</string>
    <string name="access_previusly">Read your chip as</string>
    <string name="trus_contact">Trust Contact</string>
    <string name="emergency">Emergency</string>
    <string name="request_permission">Request Permission</string>
    <string name="unkownChip">This chip isn\'t yours!</string>
    <string name="given_permissions">Given Permissions</string>
    <string name="received_permissions">Received Permissions</string>
    <string name="given">Given</string>
    <string name="received">Received</string>
    <string name="permissions">Permissions</string>
    <string name="title_home">Your Chips</string>
    <string name="update_user">Update Data</string>
    <string name="update_user_desc">Update your profile data what others see about you</string>
    <string name="notice_privacy">Notice of Privacy</string>
    <string name="notice_privacy_desc">Look everything what happens with your personal data</string>
    <string name="about">About</string>
    <string name="about_desc">Who created this app</string>
    <string name="logout">Log out</string>
    <string name="logout_desc">Close your current session</string>
    <string name="chip_allowed">Allowed Chip:</string>
    <string name="chip_requested">Requested Chip:</string>
    <string name="revoke_permission">Revoke Permission</string>
    <string name="deny_permission">Deny</string>
    <string name="grant_permission">Grant</string>
    <string name="advise_different_passwords">You did not write the same password</string>
    <string name="advise_empty_field">Should complete all fields</string>
    <string name="problem_existent_user">Already exists an user with this name!</string>
    <string name="problem_no_exists_user">No exists this user</string>
    <string name="problem_wrong_password">Wrong Password</string>
    <string name="notify_request">Solicitud de acceso</string>
    <string name="pre_chip_serial">Chip Serial Number:</string>
    <string name="add_chip">Add Chip</string>
    <string name="aidchips_web">AidChips Web</string>
    <string name="camera_explain">Scan QR code showed from https://aidchips.tk</string>
    <string name="title_camera">Scan the QR Code</string>
    <string name="bring_chip">Bring chip closer</string>
    <string name="dialog_add_headline">Registra los datos del chip</string>
    <string name="field_propierty">Propiaetario</string>
    <string name="read_data">Reading Data</string>
    <string name="add_data">Add Data</string>
    <string name="field_fullname">Full name</string>
    <string name="field_blood">Tipo de Sangre</string>
    <string name="field_address">Address</string>
    <string name="field_allergies">Allergies</string>
    <string name="field_medicines">Medicines</string>
    <string name="field_healthInsurance">Health Insurance</string>
    <string name="field_donor">Donor</string>
    <string name="field_medicalNotes">Medical Notes</string>
    <string name="notify_invited">Acceso como Invitado</string>
    <string name="notify_emergency">Acceso como Emergencia</string>
    <string-array name="yesornot">
        <item>Not</item>
        <item>Yes</item>
    </string-array>
    <string-array name="typeOfBlood">
        <item>+A</item>
        <item>-A</item>
        <item>+B</item>
        <item>-B</item>
        <item>+AB</item>
        <item>-AB</item>
        <item>+O</item>
        <item>-O</item>
    </string-array>
</resources>
