<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              tools:targetApi="o"
              tools:context=".LoginActivity" >
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_begin="206dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_begin="21dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_begin="391dp"/>
    <ImageView android:id="@+id/logo"
               android:src="@drawable/ic_twitter_bird_logo"
               android:contentDescription="@null"
               android:layout_width="75dp" android:layout_height="75dp"
               android:layout_marginTop="30dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <TextView android:id="@+id/title"
              android:text="@string/signup_title"
              style="@style/Text.Title"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@id/logo"
              app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <EditText android:id="@+id/field_name"
              android:inputType="textPersonName"
              android:autofillHints="@string/field_name" android:hint="@string/field_name"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/title"
              app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline5"
              app:layout_constraintEnd_toStartOf="@+id/guideline6"/>
    <EditText android:id="@+id/field_pass"
              android:inputType="textPassword"
              android:autofillHints="@string/field_pass" android:hint="@string/field_pass"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/field_name"
              app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline5"
              app:layout_constraintEnd_toStartOf="@+id/guideline6"/>
    <EditText android:id="@+id/field_passConfirm"
              android:inputType="textPassword"
              android:autofillHints="@string/field_passConfirm" android:hint="@string/field_passConfirm"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/field_pass"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/guideline6"
              app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <EditText android:id="@+id/field_mail"
              android:inputType="text"
              android:autofillHints="@string/field_mail" android:hint="@string/field_mail"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/field_passConfirm"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/guideline6"
              app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <TextView android:id="@+id/initPhone"
              android:text="@string/InitPhone"
              android:textSize="17sp"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@id/field_mail"
              app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <EditText android:id="@+id/field_tel"
              android:inputType="phone"
              android:autofillHints="@string/field_tel" android:hint="@string/field_tel"
              android:maxLength="10"
              android:layout_width="150dp" android:layout_height="wrap_content"
              android:layout_marginStart="5dp"
              app:layout_constraintLeft_toRightOf="@id/initPhone"
              app:layout_constraintBaseline_toBaselineOf="@+id/initPhone"/>
    <Button android:id="@+id/button_signin"
            android:text="@string/signup"
            android:textSize="@dimen/TextNormal"
            android:background="@drawable/ic_button_rounded"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/field_tel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"/>
    <TextView android:id="@+id/signin_advise"
              style="@style/Text.Little"
              android:layout_marginTop="5dp"
              android:textColor="@color/red"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@+id/button_signin" app:layout_constraintEnd_toEndOf="@+id/button_signin"
              app:layout_constraintTop_toBottomOf="@+id/button_signin"/>
    <Button android:id="@+id/button_go_login"
            android:text="@string/login"
            android:textSize="@dimen/TextSmall"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"/>
</android.support.constraint.ConstraintLayout>