<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton android:id="@+id/closeDialog"
                 android:src="@drawable/abc_ic_clear_material"
                 android:background="@null"
                 android:contentDescription="@null"
                 android:layout_margin="@dimen/MarginReallyLittle"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                 android:clickable="true" android:focusable="true"/>
    <ImageView android:src="@drawable/ic_exclamation_mark"
               android:contentDescription="@null"
               android:layout_width="@dimen/IconReallyBig" android:layout_height="@dimen/IconReallyBig"
               android:layout_marginTop="@dimen/Margin"
               app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView"/>
    <TextView android:text="@string/unkownChip"
              style="@style/TextAppearance.AppCompat.Headline"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/Margin"
              app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView"/>
    <Button android:id="@+id/btn_request_permission"
            android:text="@string/request_permission"
            android:textColor="@color/bone"
            android:background="@drawable/background_request_permission"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginBig"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true"/>
    <Button android:id="@+id/btn_emergency"
            android:text="@string/emergency"
            android:textColor="@color/bone"
            android:background="@drawable/background_emergency"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Margin"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_request_permission"
            android:focusable="true"/>
</android.support.constraint.ConstraintLayout>