<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent" android:layout_height="match_parent"
                                             tools:targetApi="o"
                                             tools:context=".LoginActivity">
    <ImageView android:id="@+id/login_logo"
               android:transitionName="logo"
               android:src="@drawable/ic_twitter_bird_logo"
               android:contentDescription="@null"
               android:layout_width="75dp" android:layout_height="75dp"
               android:layout_marginTop="30dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="@+id/login_guideline_left"/>
    <TextView android:id="@+id/login_headline"
              android:text="@string/login_title"
              style="@style/TextAppearance.AppCompat.Headline"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toBottomOf="@id/login_logo"
              app:layout_constraintStart_toStartOf="@+id/login_guideline_left"/>
    <EditText android:id="@+id/login_edit_name"
              android:inputType="textPersonName"
              android:autofillHints="@string/field_mail" android:hint="@string/field_mail"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/login_headline"
              app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
              app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
    />
    <EditText android:id="@+id/login_edit_pass"
              android:inputType="textPassword"
              android:autofillHints="@string/field_pass" android:hint="@string/field_pass"
              android:layout_width="0dp" android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@id/login_edit_name"
              app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
              app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"/>
    <com.google.android.gms.common.SignInButton android:id="@+id/login_btn_auth_google"
                                                android:layout_width="0dp" android:layout_height="wrap_content"
                                                app:layout_constraintTop_toBottomOf="@id/login_edit_pass"
                                                android:layout_marginTop="50dp"
                                                app:layout_constraintEnd_toStartOf="@+id/login_guideline_center"
                                                android:layout_marginEnd="8dp"
                                                app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
    />
    <Button android:id="@+id/login_btn_login"
            style="@style/Button"
            android:text="@string/login"
            android:background="@drawable/ic_button_rounded"
            android:layout_width="0dp" android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/login_guideline_center"
            app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
            app:layout_constraintTop_toTopOf="@+id/login_btn_auth_google"
            app:layout_constraintBottom_toBottomOf="@+id/login_btn_auth_google"/>
    <TextView android:id="@+id/login_advise"
              style="@style/TextAppearance.AppCompat.Caption"
              android:layout_marginTop="5dp"
              android:textColor="@color/red"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/login_btn_auth_google" app:layout_constraintEnd_toEndOf="@id/login_btn_login"
              app:layout_constraintTop_toBottomOf="@id/login_btn_auth_google"/>
    <Button android:id="@+id/login_btn_switch"
            android:text="@string/signup"
            android:textSize="@dimen/Text_Caption"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <android.support.constraint.Guideline android:id="@+id/login_guideline_center"
                                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline android:id="@+id/login_guideline_left"
                                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline android:id="@+id/login_guideline_right"
                                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.95"/>
</android.support.constraint.ConstraintLayout>